--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,23 +1,25 @@
-# <form action="users_path" method="post" accept-charset="UTF-8">
-#     <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-#     <label for="username">Username:</label>
-#     <input type="text" id="username" name="user[username]"><br><br>
-#     <label for="email">Email:</label>
-#     <input type="email" id="email" name="user[email]"><br><br>
-#     <label for="password">Password:</label>
-#     <input type="password" id="password" name="user[password]"><br><br>
-#     <input type="submit" value="Submit">
-#   </form>
+<!--
+<form action="users_path" method="post" accept-charset="UTF-8">
+    <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+    <label for="username">Username:</label>
+    <input type="text" id="username" name="user[username]"><br><br>
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="user[email]"><br><br>
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="user[password]"><br><br>
+    <input type="submit" value="Submit">
+  </form>
 
-  # <%= form_tag users_path :method => 'post' do |f| %>
-  #   <%= label_tag(:username, "username:") %>
-  #   <%= text_field_tag ':post[username]' %> <br><br>
-  #   <%= label_tag(:email, "enter your e-email:") %>
-  #   <%= text_field_tag ':post[email]' %> <br><br>
-  #   <%= label_tag(:password, "password:") %>
-  #   <%= password_field_tag 'password' %> <br><br>
-  #   <div> <%= submit_tag("Sign up") %> <div>
-  # <% end %>
+    <#%=  form_tag users_path :method => 'post' do |f| %>
+    <#%= label_tag(:username, "username:") %>
+    <#%= text_field_tag ':post[username]' %> <br><br>
+    <#%= label_tag(:email, "enter your e-email:") %>
+    <#%= text_field_tag ':post[email]' %> <br><br>
+    <#%= label_tag(:password, "password:") %>
+    <#%= password_field_tag 'password' %> <br><br>
+    <div> <#%= submit_tag("Sign up") %> <div>
+  <#% end %>
+-->
 
   <%= form_with model: user do |form| %>
     <div>
