--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -23,7 +23,7 @@
   <#%= form_for user do |f| %>
     username: <#%= f.text_field :username %><br />
     email   : <#%= f.text_field :email %><br />
-    password: <#%= f.text_area :biography %><br />
+    password: <#%= f.text_area :password %><br />
     <#%= f.submit %>
   <#% end %>
 -->
